--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,36 +1,26 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-  <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-    <!-- Global text colors -->
+  <style name="AppTheme" parent="Theme.EdgeToEdge">
     <item name="android:textColor">#000000</item>
     <item name="android:textColorPrimary">#000000</item>
     <item name="android:textColorSecondary">#666666</item>
-    <item name="android:textColorHint">#888888</item> <!-- Hint/placeholder color -->
-    
-    <!-- Input field styles -->
+    <item name="android:textColorHint">#888888</item>
     <item name="editTextStyle">@style/Widget.App.TextInput</item>
     <item name="textInputStyle">@style/Widget.App.TextInputLayout</item>
     <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
-    
-    <!-- Status bar and primary colors -->
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="android:statusBarColor">#ffffff</item>
   </style>
-
-  <!-- TextInput style (for the box) -->
   <style name="Widget.App.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
     <item name="boxStrokeColor">#cccccc</item>
     <item name="hintTextColor">?android:textColorHint</item>
     <item name="android:textColorHint">?android:textColorHint</item>
   </style>
-
-  <!-- EditText style (for the text itself) -->
   <style name="Widget.App.TextInput" parent="Widget.AppCompat.EditText">
     <item name="android:textColor">?android:textColorPrimary</item>
     <item name="android:textColorHint">?android:textColorHint</item>
     <item name="android:textSize">16sp</item>
     <item name="android:padding">12dp</item>
   </style>
-
   <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
     <item name="windowSplashScreenBackground">@color/splashscreen_background</item>
     <item name="windowSplashScreenAnimatedIcon">@drawable/splashscreen_logo</item>
